# NotifyHub

./: .dockerignore  .gitignore  .gitmodules  .project.sh  AGENTS.md  Dockerfile  Makefile  README.TESTING.md  README.UI.md  README.md  bach_lite.sh  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.sh  send_bark_noti.sh  session-ses_44d9.md  side-by-side-layout.css  token-usage-output.txt
__refmodules__/: ConfigStack  confstack  htpy  mini_logger  opencode  rabbitmq-website
__refmodules__/google_dynamic_default_avatar/: README.md
__refmodules__/notification-html-css/: index.html  notification.html
_refs/: mini_bash  opencode  opencode-notify  opentui  pydantic
chat_plugins/opencode/: README.md
docs/_meta/: test-organization.md
docs/common/: testing-background-servers.md
docs/important/: dev-cycle.md  the-tui.md  tui-testing-guide.md
docs/issues/: 2025-12-17-automate-web-ui-tests-with-playwright.md  2025-12-26-audio-autoplay-handling.md  2025-12-26-project-restructure.md  2025-12-29-migrate-from-tailwindcss-to-mantine.md  2025-12-30-apply-apple-notification-animation-behavior.md  2025-12-30-apply-apple-notification-stacking.md  2025-12-30-consolidate-notification-models.md  2025-12-30-individual-notification-deletion.md  (+3 more)
docs/refs/: github_labels.md  (+9 more)
local/: gitignore_to_dockerignore.py  noti.sh
notifyhub/: cli.py  models.py  server.py
tests/: test_models.py  test_server.py
web/: index.html  package-lock.json  package.json  vite.config.js  webpack.config.js
(+148 files in other folders)
