[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notifyhub"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "aiofiles",
    "requests",
    "sse-starlette",
    "pandas",
    "py_mini_logger",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio"
]

[tool.setuptools]

package-dir = {"" = "src"}

packages = ["notifyhub"]

[project.scripts]
notifyhub-server = "notifyhub.backend.backend:main"
notifyhub-push = "notifyhub.cli:main"